--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,14 +17,14 @@ en: &DEFAULT_EN
       section: portfolio
     - title: "About"
       section: about
-    - title: "Timeline"
-      section: timeline
-    - title: "Team"
-      section: team
+    # - title: "Timeline"
+    #   section: timeline
+    # - title: "Team"
+    #   section: team
     - title: "Contact"
       section: contact
-    - title: "Theme Source"
-      url: https://github.com/raviriley/agency-jekyll-theme/
+    # - title: "Theme Source"
+    #   url: https://github.com/raviriley/agency-jekyll-theme/
 en-US:
   <<: *DEFAULT_EN
 en-CA:
@@ -44,14 +44,14 @@ es: &DEFAULT_ES
       section: portafolio
     - title: "Sobre Nosotros"
       section: nosotros
-    - title: "Cronología"
-      section: cronologia
-    - title: "Equipo"
-      section: equipo
+    # - title: "Cronología"
+    #   section: cronologia
+    # - title: "Equipo"
+    #   section: equipo
     - title: "Contáctenos"
       section: contacto
-    - title: "Fuente de la plantilla"
-      url: https://github.com/raviriley/agency-jekyll-theme/
+    # - title: "Fuente de la plantilla"
+    #   url: https://github.com/raviriley/agency-jekyll-theme/
 es-ES:
   <<: *DEFAULT_ES
 es-CO:
@@ -67,13 +67,13 @@ de: &DEFAULT_DE
       section: Portfolio
     - title: "Über uns"
       section: Ueber
-    - title: "Geschichte"
-      section: Geschichte
-    - title: "Team"
-      section: Team
+    # - title: "Geschichte"
+    #   section: Geschichte
+    # - title: "Team"
+    #   section: Team
     - title: "Kontakt"
       section: Kontakt
-    - title: "Quellcode des Themas"
-      url: https://github.com/raviriley/agency-jekyll-theme/
+    # - title: "Quellcode des Themas"
+    #   url: https://github.com/raviriley/agency-jekyll-theme/
 de-DE:
   <<: *DEFAULT_DE
