--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ baseurl: "/santicrafthome.github.io" # the subpath of your site, e.g. /blog
 
 title      : Welcome to Santicraft!
 email      : santicrafthome@gmail.com #this is also the email contact forms will go to
-description: "Agency Bootstrap theme converted to a Jekyll theme, plus new features: Google Analytics, Markdown support, custom pages, and more!"
+description: "We Are Santicraft Home Improvement. Explore Our Full Range Of Services"
 author     : Essmer
 # logo:     #optional, defaults to site title
   # path: assets\img\clients\creative-market.jpg
