--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -18,7 +18,7 @@ en: &DEFAULT_EN
 
   services:
     title: "Services"
-    text: "Lorem ipsum"
+    text: "Comprehensive Building Solutions"
     section: services
     list:
       - title: "E-Commerce"
@@ -33,7 +33,7 @@ en: &DEFAULT_EN
 
   portfolio:
     title: "Portfolio"
-    text: "Lorem ipsum dolor sit amet consectetur."
+    text: "Explore Our Work"
     section: portfolio
     closebutton: "Close Project"
 
@@ -131,7 +131,10 @@ en: &DEFAULT_EN
 
   contact:
     title: "Contact Us"
-    text: "Lorem ipsum or call 123456789"
+    text: |
+      **Phone**: (718)791-3656  
+      **Email**: _santicrafthome@gmail.com_   
+      Send Us A Message
     section: contact
     name: "Name*"
     name-validation: "Please enter your name."
@@ -147,15 +150,15 @@ en: &DEFAULT_EN
   footer:
     legal: "Privacy Policy"
     social:
-      - url: https://twitter.com
+      - url: #https://twitter.com
         icon: "fab fa-twitter"
-      - url: https://facebook.com
+      - url: #https://facebook.com
         icon: "fab fa-facebook-f"
-      - url: https://linkedin.com
+      - url: #https://linkedin.com
         icon: "fab fa-linkedin-in"
-      - url: https://github.com/raviriley/agency-jekyll-theme
+      - url: #https://github.com/raviriley/agency-jekyll-theme
         icon: "fab fa-github"
-      - url: https://instagram.com
+      - url: #https://instagram.com
         icon: "fab fa-instagram"
 en-US:
   <<: *DEFAULT_EN
