modified image path back to /assets/img

--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -23,19 +23,19 @@ en: &DEFAULT_EN
     list:
       - title: "KITCHEN"
         desc: "Transform your kitchen into a stunning, functional space with our expert kitchen remodeling services. Our skilled team specializes in creating custom designs that blend style and practicality, ensuring your kitchen is not only beautiful but also highly efficient."
-        image: "../img/Kitchen_Remodeling.png"
+        image: "/assets/img/Kitchen_Remodeling.png"
       - title: "BATHROOM"
         desc: "Elevate your bathroom to a luxurious retreat with our professional bathroom remodeling services. From modern fixtures to elegant tiling, we focus on quality craftsmanship and innovative design to create a serene and stylish space that meets your every need."
-        image: "../img/Bathroom_Remodeling.png"
+        image: "/assets/img/Bathroom_Remodeling.png"
       - title: "BASEMENT"
         desc: "Unlock the potential of your basement with our comprehensive remodeling services. Whether you're envisioning a cozy family room, a state-of-the-art home theater, or a functional home office, our experienced team will transform your basement into a versatile and inviting space."
-        image: "../img/Basement_Remodeling.png"
+        image: "/assets/img/Basement_Remodeling.png"
       - title: "INTERIOR/EXTERIOR"
         desc: "Revitalize your home with our all-encompassing home remodeling services. We handle everything from minor updates to complete overhauls, ensuring each project is tailored to your vision and lifestyle. Trust us to enhance the beauty, functionality, and value of your home."
-        image: "../img/Exterior_Interior_Remodeling.png"
+        image: "/assets/img/Exterior_Interior_Remodeling.png"
       - title: "GENERAL CONTRACTING"
         desc: "Our services extend beyond the usual. Whether you're looking for custom carpentry, outdoor living spaces, unique renovations, expert electrical upgrades, or comprehensive plumbing solutions, our team has the skills and creativity to bring your most ambitious home improvement projects to life. With our deep expertise in both electrical and plumbing systems, we ensure that every aspect of your project is handled with precision and care, guaranteeing functionality and safety alongside aesthetic excellence. Trust us to transform your space into something extraordinary."
-        image: "../img/General_Contracting.png"
+        image: "/assets/img/General_Contracting.png"
       - title: "FULLY LICENSED AND INSURED"
         desc: "Our commitment to excellence is reinforced by our status as a fully licensed and insured company. Holding all necessary licenses, we adhere strictly to industry standards and local building codes, ensuring every project is not only aesthetically pleasing but also structurally sound and compliant with regulations. Our insurance coverage offers peace of mind, protecting our clients and their properties throughout the duration of our services. When you choose us, you're choosing a partner who values safety, responsibility, and professional integrity in every aspect of our work."
         # icon: fab fa-markdown
