--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ remote_theme: raviriley/agency-jekyll-theme
 url    : "https://github.com/SanticraftHome" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl_github: "https://santicrafthome.github.io"
 baseurl: "/santicrafthome.github.io" # the subpath of your site, e.g. /blog
+baseurl_github_portfolio: "https://santicrafthome.github.io/"
 
 title      : Welcome to Santicraft!
 email      : santicrafthome@gmail.com #this is also the email contact forms will go to
