--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -23,13 +23,13 @@ en: &DEFAULT_EN
     list:
       - title: "KITCHEN"
         desc: "Transform your kitchen into a stunning, functional space with our expert kitchen remodeling services. Our skilled team specializes in creating custom designs that blend style and practicality, ensuring your kitchen is not only beautiful but also highly efficient."
-        image: "/assets/img/Kitchen_Remodeling.png"
+        image: "/assets/img/portfolio/suecoff_2a.png"
       - title: "BATHROOM"
         desc: "Elevate your bathroom to a luxurious retreat with our professional bathroom remodeling services. From modern fixtures to elegant tiling, we focus on quality craftsmanship and innovative design to create a serene and stylish space that meets your every need."
-        image: "/assets/img/Bathroom_Remodeling.png"
+        image: "/assets/img/portfolio/Korsah_1a.png"
       - title: "BASEMENT"
         desc: "Unlock the potential of your basement with our comprehensive remodeling services. Whether you're envisioning a cozy family room, a state-of-the-art home theater, or a functional home office, our experienced team will transform your basement into a versatile and inviting space."
-        image: "/assets/img/Basement_Remodeling.png"
+        image: "/assets/img/portfolio/dan_basement_1a.jpg"
       - title: "INTERIOR/EXTERIOR"
         desc: "Revitalize your home with our all-encompassing home remodeling services. We handle everything from minor updates to complete overhauls, ensuring each project is tailored to your vision and lifestyle. Trust us to enhance the beauty, functionality, and value of your home."
         image: "/assets/img/Exterior_Interior_Remodeling.png"
